Fixes styling causing white space next to search bar

--- a/less/site.less
+++ b/less/site.less
@@ -373,6 +373,7 @@ mark.white {
   overflow-y: auto;
   overflow-x: hidden;
   height: 100%;
+  padding-top: 50px;
 }
 
 .outer-height-wrap {
@@ -383,7 +384,6 @@ mark.white {
 .inner-height-wrap {
   height: 100%;
   width: 100%;
-  margin-top: 50px;
 }
 
 @media (min-width: 992px) {
